# cuda-collatz

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst
src/: README.md  overview.txt
src/cpp/: collatz_cpu_64_bit_reference.cpp  collatz_simple_cpu_64_bit.cpp  mksieve.cpp
src/cpu_64bit_full/: collatz.cpp  core.asm  core.h
src/cuda/: collatz.cpp  collatz_kernel.cu  collatz_kernel.h
src/gpu_ptx_full/: collatz.cpp  collatz_kernel.cu  collatz_kernel.h
src/gpu_simple/: collatz.cpp  collatz_kernel.cu  collatz_kernel.h
src/mksieve_64bit/: mksieve.cpp
src/py/: collatz.py
src/util/: cuda_util.cpp  cuda_util.h  int_types.h
